# Graideon-Submissions-generator

./: .gitignore  .replit  DEV_SETUP.md  Procfile  RAILWAY_DEPLOY.md  ReadMe.md  nixpacks.toml  overview.md  pyproject.toml  railway.toml  replit.md  requirements.txt
attached_assets/: Pasted-You-are-an-expert-full-stack-engineer-Build-a-small-web_1764987815358.txt
client/: package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css
client/src/components/: ConfigForm.jsx  ExportButtons.jsx  LoginPage.jsx  PastGenerations.jsx  SubmissionModal.jsx  SubmissionsTable.jsx
server/: app.py  generator.py  main.py  models.py
server/instance/: graideon.db
